# DATA8007-Project

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
configs/: double_dqn_cartpole.yaml  dqn_cartpole.yaml
logs/: eval_double_dqn_seed0.csv  eval_double_dqn_seed1.csv  eval_double_dqn_seed2.csv  eval_dqn_seed0.csv  eval_dqn_seed1.csv  eval_dqn_seed2.csv  train_double_dqn_seed0.csv  train_double_dqn_seed1.csv  train_double_dqn_seed2.csv  train_dqn_seed0.csv  train_dqn_seed1.csv  train_dqn_seed2.csv
presentation/: outline.md  slides.tex
report/: README.md  main.tex  neurips_2025.sty
results/: evaluation_double_dqn_seed0_best.json  evaluation_double_dqn_seed1_best.json  evaluation_double_dqn_seed2_best.json  evaluation_dqn_seed0_best.json  evaluation_dqn_seed1_best.json  evaluation_dqn_seed2_best.json  plot_manifest.json  summary.csv  summary_double_dqn.csv  summary_double_dqn_seed0.json  summary_double_dqn_seed1.json  summary_double_dqn_seed2.json  summary_dqn.csv  summary_dqn_seed0.json  summary_dqn_seed1.json  summary_dqn_seed2.json
scripts/: evaluate.py  plot_results.py  run_all.sh  setup_env.sh  train.py
src/data8007_rl/: __init__.py  agent.py  config.py  evaluate.py  networks.py  plotting.py  replay_buffer.py  train.py  utils.py
